kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql
  labels:
    app: graphql
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: graphql
